...
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="240dp"
            android:layout_height="110dp"
            android:layout_above="@+id/emailL"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/logo_main" />

        <EditText
            android:id="@+id/emailL"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_above="@+id/passwordL"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="EMAIL ADDRESS"
...
            android:text="Forgotten Password?"
            android:textColor="@color/greenAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:layout_above="@+id/loginBtnM"
            android:layout_centerHorizontal="true" />


        <Button
            android:id="@+id/loginBtnM"
            android:layout_width="match_parent"
            android:layout_above="@+id/registerBtnM"
            style="@style/standard_button"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:onClick="onLogin"
            android:text="Log in"
            android:textColor="@android:color/white"
            android:textColorHint="@color/greenAccent"
            android:textSize="45sp" />


        <Button
...
