...
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tipIcon"
            android:layout_toEndOf="@+id/tipIcon" />


        <Button
            android:id="@+id/ExerciseListBtn"
            style="@style/standard_button"
            android:layout_above="@+id/ProgressBtn"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/standard_button_green"
            android:text="Exercise list" />

        <Button
            android:id="@+id/ProgressBtn"
            style="@style/standard_button"
            android:layout_above="@+id/Settings"
            android:layout_alignParentEnd="true"
...
