...
            android:layout_marginStart="19dp"
            android:layout_alignTop="@+id/listView"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:srcCompat="@drawable/ic_exit_to_app_white_24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp" />
...
