<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.strokere.ProgressGraph">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="368dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="130dp" />

        <include
            android:id="@+id/include2"
            layout="@layout/navbar" />

        <Button
            android:id="@+id/sitToStandsBtn"
            android:layout_width="130dp"
            android:background="@drawable/standard_button_green"
            android:layout_height="wrap_content"
            android:layout_below="@+id/graph"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:onClick=""
            android:text="Sit To Stands"
            android:layout_alignStart="@+id/ShuttleRunBtn" />

        <Button
            android:id="@+id/StepUpsBtn"
            android:layout_width="130dp"
            android:background="@drawable/standard_button_green"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sitToStandsBtn"
            android:layout_alignStart="@+id/ShuttleRunBtn"
            android:layout_marginBottom="7dp"
            android:onClick=""
            android:text="Step Ups" />

        <Button
            android:id="@+id/ShuttleRunBtn"
            android:layout_width="130dp"
            android:background="@drawable/standard_button_green"
            android:layout_height="wrap_content"
            android:layout_below="@+id/StepUpsBtn"
            android:layout_centerHorizontal="true"
            android:text="Shuttle Run" />

        <TextView
            android:id="@+id/highestScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/greenAccent" />

        <TextView
            android:id="@+id/testName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/include2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textSize="30dp"
            android:text=""
            android:textColor="@color/greenAccent" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
