...
<TextView
    android:id="@+id/toolbarTitleP"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:gravity="left"
    android:text="Progress"
    android:textColor="@color/colorPrimaryWhite"
    android:textSize="20sp" />

<Spinner
    android:id="@+id/toolbarMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right" />
    -->

<ImageButton
    android:id="@+id/homeNavBtn"
    android:layout_width="34dp"
    android:layout_height="34dp"
    android:background="@drawable/ic_home_white_24dp"
    android:layout_marginStart="25dp"
    android:layout_toStartOf="@+id/exerciseListNavBtn" />

...
