<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.strokere.ProgressMenu">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <include
            android:id="@+id/include2"
            layout="@layout/navbar" />

        <include
            android:id="@+id/include3"
            layout="@layout/tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tipIcon"
            android:layout_toEndOf="@+id/tipIcon" />


        <Button
            android:id="@+id/CalendarBtn"
            style="@style/standard_button"
            android:layout_height="120dp"
            android:layout_above="@+id/TestScores"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/standard_button_green"
            android:text="Workout Calendar" />

        <Button
            android:id="@+id/TestScores"
            style="@style/standard_button"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/standard_button_green"
            android:onClick="oSettings"
            android:text="Test Scores"
            app:layout_constraintTop_toBottomOf="@+id/StepUpsBtn" />

        <TextView
            android:id="@+id/tipIconBackground"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/include2"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/tip_background" />

        <ImageView
            android:id="@+id/tipIcon"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/include2"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/ic_lightbulb_outline_white_24dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
