...
            android:layout_alignBottom="@+id/shuffle"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:text="graph" />

        <Button
            android:id="@+id/backMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/currentMonth"
            android:layout_alignBottom="@+id/currentMonth"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/currentMonth"
            android:background="@drawable/ic_keyboard_arrow_left_white_24dp" />

        <Button
            android:id="@+id/forwardMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/currentMonth"
            android:layout_alignBottom="@+id/currentMonth"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/currentMonth"
...
