<?xml version="1.0" encoding="utf-8"?>
<resources>
<string-array name ="menu_array">
        <item>Main Menu</item>
        <item>Progress</item>
</string-array>
</resources>